<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.file_handlers</groupId>
    <artifactId>superX_project</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21.0.12</version>
        </dependency>


        <dependency>
            <groupId>com.google.firebase</groupId>
            <artifactId>firebase-admin</artifactId>
            <version>9.1.1</version>
        </dependency>

        <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-core</artifactId>
            <version>2.9.2</version>
        </dependency>

        <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-parsers-standard-package</artifactId>
            <version>2.9.2</version>
        </dependency>

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20240303</version>
        </dependency>
       <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>21.0.12</version>
        </dependency>
        <dependency>
            <groupId>com.cloudinary</groupId>
            <artifactId>cloudinary-http5</artifactId>
            <version>2.3.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>21.0.12</version>
        </dependency>
       

    </dependencies>

     <build>
        <plugins>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                 <configuration>
    <mainClass>com.file_handlers.Main</mainClass>
    <options>
        <option>--add-exports</option>
        <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
        <option>--add-opens</option>
        <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
        <option>--add-exports</option>
        <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
        <option>--add-opens</option>
        <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
        <option>--add-exports</option> 
        <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
        <option>--add-opens</option>
        <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
        <option>--add-exports</option>
        <option>javafx.base/com.sun.javafx.reflect=ALL-UNNAMED</option>
        <option>--add-opens</option>
        <option>javafx.base/com.sun.javafx.reflect=ALL-UNNAMED</option>
    </options>
</configuration>
                
            </plugin>
        </plugins>
    </build>

    

   

</project>